--- a/factgenie/templates/forms/data_selection.html
+++ b/factgenie/templates/forms/data_selection.html
@@ -1,11 +1,17 @@
 <p>
+    {% if mode == 'llm_gen' %}
+    <small class="text-muted">Select the combinations of datasets and splits (only
+        the available
+        combinations will be included in the generation campaign).</small>
+    {% elif mode == 'llm_eval' %}
     <small class="text-muted">Select the combinations of datasets, splits, and model outputs (only
         the available
-        combinations will be included in the evaluation).</small>
+        combinations will be included in the evaluation campaign).</small>
+    {% endif %}
 </p>
 
 <div id="data-select-area" class="row">
-    <div class="col-md-4">
+    <div {% if mode=='llm_eval' %} class="col-md-4" {% else %} class="col-md-6" {% endif %}>
         <div class="card">
             <div class="card-header bg-light">
                 Datasets
@@ -25,7 +31,8 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4" id="splits-column" style="display: none;">
+    <div {% if mode=='llm_eval' %} class="col-md-4" {% else %} class="col-md-6" {% endif %} id="splits-column"
+        style="display: none;">
         <div class="card">
             <div class="card-header bg-light">
                 Splits
@@ -60,7 +67,7 @@
                 <tr>
                     <th scope="col">Dataset</th>
                     <th scope="col">Split</th>
-                    <th scope="col">Outputs</th>
+                    {% if mode == 'llm_eval' %} <th scope="col">Outputs</th> {% endif %}
                     <th scope="col">Examples</th>
                 </tr>
             <tbody id="selectedDatasetsContent">
@@ -70,4 +77,7 @@
     </div>
 </div>
 
+<script>
+    window.mode = "{{ mode }}";
+</script>
 <script src="{{ host_prefix }}/static/js/datasets.js"></script>
