--- a/factgenie/templates/campaigns/annotate_body.html
+++ b/factgenie/templates/campaigns/annotate_body.html
@@ -75,6 +75,8 @@
             </div>
             <div class="" id="checkbox-annotation-box">
               {{ flags | safe }}
+
+              {{ options | safe }}
               <div class="d-flex align-items-center justify-content-center" id="submit-annotation-box">
                 <div class="btn-group" role="group">
                   <button type="button" class="btn btn-sm btn-success" onclick="markAnnotationAsComplete();">✅ Mark
