Add an option to selectively remove individual items in the data selector

--- a/factgenie/templates/forms/data_selection.html
+++ b/factgenie/templates/forms/data_selection.html
@@ -1,12 +1,8 @@
 <p>
     {% if mode == 'llm_gen' %}
-    <small class="text-muted">Select the combinations of datasets and splits (only
-        the available
-        combinations will be included in the generation campaign).</small>
+    <small class="text-muted">Select the combinations of datasets and splits.</small>
     {% else %}
-    <small class="text-muted">Select the combinations of datasets, splits, and model outputs (only
-        the available
-        combinations will be included in the evaluation campaign).</small>
+    <small class="text-muted">Select the combinations of datasets, splits, and model outputs.</small>
     {% endif %}
 </p>
 
