--- a/factgenie/templates/index.html
+++ b/factgenie/templates/index.html
@@ -65,25 +65,26 @@
       <div class="col-md-4">
         <div class="card text-center mt-3">
           <div class="card-body">
-            <a href="{{ host_prefix }}/datasets">
-              <img src="{{ host_prefix }}/static/img/datasets.png" class="intro-img">
-              <h5 class="card-title">Datasets</h5>
+            <a href="{{ host_prefix }}/analysis">
+              <img src="{{ host_prefix }}/static/img/analysis.png" class="intro-img">
+              <h5 class="card-title">Data analysis</h5>
             </a>
-            <p class="card-text">Manage datasets.</p>
+            <p class="card-text">Compute statistics over data.</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card text-center mt-3">
           <div class="card-body">
-            <a href="{{ host_prefix }}/model_outputs">
-              <img src="{{ host_prefix }}/static/img/output.png" class="intro-img">
-              <h5 class="card-title">Model outputs</h5>
+            <a href="{{ host_prefix }}/manage">
+              <img src="{{ host_prefix }}/static/img/datasets.png" class="intro-img">
+              <h5 class="card-title">Data management</h5>
             </a>
-            <p class="card-text">Manage model outputs.</p>
+            <p class="card-text">Manage datasets and model outputs.</p>
           </div>
         </div>
       </div>
+
 
     </div>
 </body>
