Add analysis pages

--- a/factgenie/templates/manage.html
+++ b/factgenie/templates/manage.html
@@ -19,9 +19,10 @@
   <div class="container">
     <div>
       <a href="{{ host_prefix }}/" class="btn btn-outline-secondary mt-5">← Main page</a>
-      <a type="button" class="btn btn-secondary mt-5" data-bs-toggle="modal" data-bs-target="#add-dataset-modal">Add
+      <a type="button" class="btn btn-primary mt-5" data-bs-toggle="modal" data-bs-target="#add-dataset-modal">Add
         dataset</a>
-      <a type="button" class="btn btn-secondary mt-5" data-bs-toggle="modal" data-bs-target="#uploadModal">Upload model
+      <a type="button" class="btn btn-primary mt-5" data-bs-toggle="modal" data-bs-target="#uploadModal">Add
+        model
         outputs</a>
     </div>
 
