--- a/factgenie/templates/index.html
+++ b/factgenie/templates/index.html
@@ -65,7 +65,7 @@
       <div class="col-md-4">
         <div class="card text-center mt-3">
           <div class="card-body">
-            <a href="{{ host_prefix }}/analysis">
+            <a href="{{ host_prefix }}/analyze">
               <img src="{{ host_prefix }}/static/img/analysis.png" class="intro-img">
               <h5 class="card-title">Data analysis</h5>
             </a>
