Add a basic table with annotation counts

--- a/factgenie/templates/llm_campaign_detail.html
+++ b/factgenie/templates/llm_campaign_detail.html
@@ -64,7 +64,7 @@
               class="fa fa-cog"></i> Show
             configuration</a>
           {% if mode == 'llm_eval' %}
-          <a href="{{ host_prefix }}/analyze_detail?campaign={{ campaign_id }}&source={{ mode }}" type="button"
+          <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source={{ mode }}" type="button"
             class="btn btn-outline-secondary"><i class="fa fa-area-chart"></i> View statistics</a>
           {% endif %}
         </div>
