--- a/factgenie/templates/analyze_detail.html
+++ b/factgenie/templates/analyze_detail.html
@@ -11,7 +11,18 @@
   <script src="{{ host_prefix }}/static/js/jquery.min.js"></script>
   <script src="{{ host_prefix }}/static/js/popper.min.js"></script>
   <script src="{{ host_prefix }}/static/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.2/dist/bootstrap-table.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+  <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.29.0/tableExport.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.29.0/libs/jsPDF/jspdf.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.2/dist/bootstrap-table.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
+
 </head>
+
 
 <body>
   {% include 'navbar.html' %}
@@ -21,8 +32,9 @@
     <div class="mt-5">
       <!-- <a href="{{ host_prefix }}/analyze" class="btn btn-outline-secondary mb-5">← List of
         campaigns</a> -->
-      <h3><img src="{{ host_prefix }}/static/img/analysis.png" class="inline-icon"> <b>{{
-          campaign.metadata.id }}</b></h3>
+      <h3><img src="{{ host_prefix }}/static/img/analysis.png" class="inline-icon"> <a
+          href="{{ host_prefix }}/llm_campaign/detail?mode={{ source }}&campaign_id={{ campaign.metadata.id }}"><b>{{
+            campaign.metadata.id }}</b></a></h3>
 
       <div id="metadata-block" class="mt-3">
         <hr>
@@ -32,15 +44,31 @@
           <dt class="col-sm-3"> Status </dt>
           <dd class="col-sm-9" id="metadata-status"> {{ campaign.metadata.status }} </dd>
         </dl>
-
-
       </div>
     </div>
+    <table id="statistics-table" class="table table-bordered table-hover" data-show-export="true"
+      data-toolbar="#toolbar">
+      <thead>
+        <tr>
+          <th data-field="dataset">Dataset</th>
+          <th data-field="split">Split</th>
+          <th data-field="setup_id">Setup</th>
+          <th data-field="annotation_category">Annotation Type</th>
+          <th data-field="total_annotation_count">Total</th>
+          <th data-field="avg_annotation_count">Average</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Table rows will be populated by jQuery -->
+      </tbody>
+    </table>
+  </div>
 
 </body>
 <script>
   // variable to be used in factgenie.js
   window.url_prefix = "{{ host_prefix }}";
   window.mode = "analyze";
+  window.statistics = {{ statistics | tojson | safe }};
 </script>
 <script src="{{ host_prefix }}/static/js/analyze.js"></script>
