--- a/factgenie/templates/analyze_detail.html
+++ b/factgenie/templates/analyze_detail.html
@@ -27,13 +27,14 @@
 <body>
   {% include 'navbar.html' %}
 
-  <div class="container w-50 mt-5">
+  <div class="container w-75 mt-5">
 
     <div class="mt-5">
       <!-- <a href="{{ host_prefix }}/analyze" class="btn btn-outline-secondary mb-5">← List of
         campaigns</a> -->
       <h3><img src="{{ host_prefix }}/static/img/analysis.png" class="inline-icon"> <a
-          href="{{ host_prefix }}/llm_campaign/detail?mode={{ source }}&campaign_id={{ campaign.metadata.id }}"><b>{{
+          href="{{ host_prefix }}/llm_campaign/detail?mode={{ source }}&campaign_id={{ campaign.metadata.id }}"><b>Statistics:
+            {{
             campaign.metadata.id }}</b></a></h3>
 
       <div id="metadata-block" class="mt-3">
@@ -41,27 +42,133 @@
         <dl class="row">
           <dt class="col-sm-3"> Created </dt>
           <dd class="col-sm-9" id="metadata-created"> {{ campaign.metadata.created }} </dd>
-          <dt class="col-sm-3"> Status </dt>
-          <dd class="col-sm-9" id="metadata-status"> {{ campaign.metadata.status }} </dd>
+          <dt class="col-sm-3"> Source </dt>
+          <dd class="col-sm-9" id="metadata-source"> {{ campaign.metadata.source }} </dd>
+          <dt class="col-sm-3"> Span categories </dt>
+          <dd class="col-sm-9" id="metadata-categories">
+            {% for category in campaign.metadata.config.annotation_span_categories %}
+            <span class="badge" style="background-color: {{ category.color }}; color: rgb(60, 65, 73); ">{{
+              category.name
+              }}</span>
+            {% endfor %}
+          </dd>
         </dl>
       </div>
     </div>
-    <table id="statistics-table" class="table table-bordered table-hover" data-show-export="true"
-      data-toolbar="#toolbar">
-      <thead>
-        <tr>
-          <th data-field="dataset">Dataset</th>
-          <th data-field="split">Split</th>
-          <th data-field="setup_id">Setup</th>
-          <th data-field="annotation_category">Annotation Type</th>
-          <th data-field="total_annotation_count">Total</th>
-          <th data-field="avg_annotation_count">Average</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Table rows will be populated by jQuery -->
-      </tbody>
-    </table>
+
+    <ul class="nav nav-tabs nav-fill mt-5" id="pills-tab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="pills-span-stats-tab" data-bs-toggle="pill" href="#pills-stats-full" role="tab"
+          aria-controls="pills-stats-full"><img src="{{ host_prefix }}/static/img/stats/stats-full.png" height="30px"
+            class="heading-img-inline">Full results</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-span-stats-tab" data-bs-toggle="pill" href="#pills-stats-span" role="tab"
+          aria-controls="pills-stats-span"><img src="{{ host_prefix }}/static/img/stats/stats-span.png" height="30px"
+            class="heading-img-inline">By span categories</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-span-stats-tab" data-bs-toggle="pill" href="#pills-stats-setup" role="tab"
+          aria-controls="pills-stats-setup"><img src="{{ host_prefix }}/static/img/stats/stats-setup.png" height="30px"
+            class="heading-img-inline">By setups</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-span-stats-tab" data-bs-toggle="pill" href="#pills-stats-dataset" role="tab"
+          aria-controls="pills-stats-dataset"><img src="{{ host_prefix }}/static/img/stats/stats-dataset.png"
+            height="30px" class="heading-img-inline">By datasets</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-charts-tab" data-bs-toggle="pill" href="#pills-charts" role="tab"
+          aria-controls="pills-charts"><img src="{{ host_prefix }}/static/img/stats/stats-charts.png" height="30px"
+            class="heading-img-inline">Charts</a>
+      </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane mb-5 fade show active" id="pills-stats-full" role="tabpanel"
+        aria-labelledby="pills-stats-full-tab">
+        <table id="full-table" class="table table-bordered table-hover" data-show-export="true" data-sortable="true"
+          data-toolbar="#toolbar">
+          <thead>
+            <tr>
+              <th data-sortable="true" data-field="dataset">Dataset</th>
+              <th data-sortable="true" data-field="split">Split</th>
+              <th data-sortable="true" data-field="setup_id">Setup</th>
+              <th data-sortable="true" data-field="example_count">Ex. annotated</th>
+              <th data-sortable="true" data-field="annotation_type">Category</th>
+              <th data-sortable="true" data-field="ann_count" data-align="right">Count</th>
+              <th data-sortable="true" data-field="avg_count" data-align="right">Avg. per ex.</th>
+              <th data-sortable="true" data-field="prevalence" data-align="right">Prevalence</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane mb-5 fade show" id="pills-stats-span" role="tabpanel" aria-labelledby="pills-stats-span-tab">
+        <table id="span-table" class="table table-bordered table-hover" data-show-export="true" data-sortable="true"
+          data-toolbar="#toolbar">
+          <thead>
+            <tr>
+              <th data-sortable="true" data-field="example_count">Ex. annotated</th>
+              <th data-sortable="true" data-field="annotation_type">Category</th>
+              <th data-sortable="true" data-field="ann_count" data-align="right">Count</th>
+              <th data-sortable="true" data-field="avg_count" data-align="right">Avg. per ex.</th>
+              <th data-sortable="true" data-field="prevalence" data-align="right">Prevalence</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane mb-5 fade show" id="pills-stats-setup" role="tabpanel"
+        aria-labelledby="pills-stats-setup-tab">
+        <table id="setup-table" class="table table-bordered table-hover" data-show-export="true" data-sortable="true"
+          data-toolbar="#toolbar">
+          <thead>
+            <tr>
+              <th data-sortable="true" data-field="setup_id">Setup</th>
+              <th data-sortable="true" data-field="example_count">Ex. annotated</th>
+              <th data-sortable="true" data-field="annotation_type">Category</th>
+              <th data-sortable="true" data-field="ann_count" data-align="right">Count</th>
+              <th data-sortable="true" data-field="avg_count" data-align="right">Avg. per ex.</th>
+              <th data-sortable="true" data-field="prevalence" data-align="right">Prevalence</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane mb-5 fade show" id="pills-stats-dataset" role="tabpanel"
+        aria-labelledby="pills-stats-dataset-tab">
+        <table id="dataset-table" class="table table-bordered table-hover" data-show-export="true" data-sortable="true"
+          data-toolbar="#toolbar">
+          <thead>
+            <tr>
+              <th data-sortable="true" data-field="dataset">Dataset</th>
+              <th data-sortable="true" data-field="split">Split</th>
+              <th data-sortable="true" data-field="example_count">Ex. annotated</th>
+              <th data-sortable="true" data-field="annotation_type">Category</th>
+              <th data-sortable="true" data-field="ann_count" data-align="right">Count</th>
+              <th data-sortable="true" data-field="avg_count" data-align="right">Avg. per ex.</th>
+              <th data-sortable="true" data-field="prevalence" data-align="right">Prevalence</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane mb-5 fade show active" id="pills-charts" role="tabpanel" aria-labelledby="pills-charts-tab">
+
+      </div>
+    </div>
   </div>
 
 </body>
@@ -69,6 +176,7 @@
   // variable to be used in factgenie.js
   window.url_prefix = "{{ host_prefix }}";
   window.mode = "analyze";
+  window.metadata = {{ campaign.metadata | tojson | safe }};
   window.statistics = {{ statistics | tojson | safe }};
 </script>
 <script src="{{ host_prefix }}/static/js/analyze.js"></script>
