--- a/factgenie/templates/index.html
+++ b/factgenie/templates/index.html
@@ -69,7 +69,7 @@
               <img src="{{ host_prefix }}/static/img/analysis.png" class="intro-img">
               <h5 class="card-title">Data analysis</h5>
             </a>
-            <p class="card-text">Compute statistics over data.</p>
+            <p class="card-text">View annotation statistics.</p>
           </div>
         </div>
       </div>
