--- a/factgenie/templates/crowdsourcing_detail.html
+++ b/factgenie/templates/crowdsourcing_detail.html
@@ -43,7 +43,7 @@
           <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#config-modal"><i
               class="fa fa-cog"></i> Show
             configuration</a>
-          <a href="{{ host_prefix }}/analyze_detail?campaign={{ campaign_id }}&source=crowdsourcing" type="button"
+          <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source=crowdsourcing" type="button"
             class="btn btn-outline-secondary"><i class="fa fa-area-chart"></i> View statistics</a>
           <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
             data-bs-target="#campaign-help-modal"><i class="fa fa-question-circle">
