Improve page layouts

--- a/factgenie/templates/index.html
+++ b/factgenie/templates/index.html
@@ -67,9 +67,9 @@
           <div class="card-body">
             <a href="{{ host_prefix }}/analyze">
               <img src="{{ host_prefix }}/static/img/analysis.png" class="intro-img">
-              <h5 class="card-title">Data analysis</h5>
+              <h5 class="card-title">Analyze</h5>
             </a>
-            <p class="card-text">View annotation statistics.</p>
+            <p class="card-text">Compute annotation statistics.</p>
           </div>
         </div>
       </div>
@@ -77,8 +77,8 @@
         <div class="card text-center mt-3">
           <div class="card-body">
             <a href="{{ host_prefix }}/manage">
-              <img src="{{ host_prefix }}/static/img/datasets.png" class="intro-img">
-              <h5 class="card-title">Data management</h5>
+              <img src="{{ host_prefix }}/static/img/manage.png" class="intro-img">
+              <h5 class="card-title">Manage</h5>
             </a>
             <p class="card-text">Manage datasets and model outputs.</p>
           </div>
