--- a/factgenie/templates/analyze.html
+++ b/factgenie/templates/analyze.html
@@ -21,39 +21,65 @@
   <div class="container w-75 mt-5">
     <a href="{{ host_prefix }}/" class="btn btn-outline-secondary mb-5">← Main page</a>
 
-    <div class="mt-1">
+    <h3><img src="{{ host_prefix }}/static/img/analysis.png" class="heading-img-inline">
+      <b>Analysis</b>
+    </h3>
 
-      <h3><img src="{{ host_prefix }}/static/img/analysis.png" class="heading-img-inline">
-        <b>Statistics</b>
-      </h3>
-      <div id="campaigns">
+    <ul class="nav nav-tabs nav-fill mt-4" id="pills-tab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="pills-datasets-tab" data-bs-toggle="pill" href="#pills-datasets" role="tab"
+          aria-controls="pills-datasets"><img src="{{ host_prefix }}/static/img/individual.png" height="30px"
+            class="heading-img-inline">Individual statistics</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-outputs-tab" data-bs-toggle="pill" href="#pills-outputs" role="tab"
+          aria-controls="pills-outputs"><img src="{{ host_prefix }}/static/img/inter.png" height="30px"
+            class="heading-img-inline">Inter-annotator agreement</a>
+      </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane fade show active" id="pills-datasets" role="tabpanel" aria-labelledby="pills-datasets-tab">
+        <div class="mt-1">
+          <div id="campaigns">
 
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th scope="col">Id</th>
-              <th scope="col">Created</th>
-              <th scope="col">Status</th>
-              <th scope="col">Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for campaign in campaigns %}
-            <tr>
-              <td><a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign.id }}&source={{ campaign.source }}"
-                  class="blue-link">{{
-                  campaign.id }}</a></td>
-              <td>{{ campaign.created }}</td>
-              <td>
-                <a href="{{ host_prefix }}/analyze?campaign={{ campaign.id }}&source={{ campaign.source }}"
-                  class="btn btn-outline-secondary" data-bs-toggle="tooltip" title="Preview the crowdsourcing page">
-                  <i class="fa fa-eye"></i>
-                </a>
-              </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th>
+                  <th scope="col">Created</th>
+                  <th scope="col">Labels</th>
+                  <th scope="col">Status</th>
+                  <!-- <th scope="col">Actions</th> -->
+                </tr>
+              </thead>
+              <tbody>
+                {% for campaign in campaigns %}
+                <tr>
+                  <td><a
+                      href="{{ host_prefix }}/analyze/detail?campaign={{ campaign.metadata.id }}&source={{ campaign.metadata.source }}"
+                      class="blue-link">{{
+                      campaign.metadata.id }}</a></td>
+                  <td>{{ campaign.metadata.created }}</td>
+                  <td>{% for category in campaign.metadata.config.annotation_span_categories %}
+                    <span class="badge" style="background-color: {{ category.color }}; color: rgb(60, 65, 73); ">{{
+                      category.name
+                      }}</span>
+                    {% endfor %}
+                  </td>
+                  <td>
+                    {% for status, count in campaign.stats.items() %}
+                    <span class="badge bg-secondary">{{ status }}: {{ count }}</span>
+                    {% endfor %}
+                  </td>
+                  <!-- <td>
+                    <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign.metadata.id }}&source={{ campaign.metadata.source }}"
+                      type="button" class="btn btn-outline-secondary"><i class="fa fa-area-chart">
+                  </td> -->
+                </tr>
+                {% endfor %}
+              </tbody>
+          </div>
+        </div>
       </div>
     </div>
 
