--- a/factgenie/templates/analyze_detail.html
+++ b/factgenie/templates/analyze_detail.html
@@ -34,7 +34,7 @@
       <!-- <a href="{{ host_prefix }}/analyze" class="btn btn-outline-secondary mb-5">← List of
         campaigns</a> -->
       <h3><img src="{{ host_prefix }}/static/img/analysis.png" class="inline-icon"> <a
-          href="{{ host_prefix }}/llm_campaign/detail?mode={{ source }}&campaign_id={{ campaign.metadata.id }}"><b>Statistics:
+          href="{{ host_prefix }}/{% if source == 'llm_eval' %}llm_campaign{% else %}crowdsourcing{% endif %}/detail?mode={{ source }}&campaign={{ campaign.metadata.id }}"><b>Statistics:
             {{
             campaign.metadata.id }}</b></a></h3>
 
