--- a/factgenie/templates/manage.html
+++ b/factgenie/templates/manage.html
@@ -42,79 +42,75 @@
       </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
-      <div class="tab-pane fade show active" id="pills-datasets" role="tabpanel" aria-labelledby="pills-datasets-tab">
-        <div class="mt-3">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col" width="5%"></th>
-                <th scope="col" width="12%">Dataset</th>
-                <th scope="col" width="22%">Class</th>
-                <!-- <th scope="col">Description</th> -->
-                <th scope="col" width="8%">Splits</th>
-                <th scope="col" width="8%">Examples</th>
-                <th scope="col" width="5%">Loaded</th>
-                <th scope="col" width="10%">Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for dataset_id, dataset in datasets.items() %}
-              <tr>
-                <td><img src="{{ host_prefix }}/static/img/datatypes/{{ dataset.type }}.png" class="intro-img"></td>
-                <td>
-                  {% if dataset.enabled %}
-                  <a href="{{ host_prefix }}/browse?dataset={{ dataset_id }}&split={{ dataset.splits[0] }}&example_idx=0"
-                    class="blue-link">
-                    {{ dataset_id
+      <div class="tab-pane fade show active mt-3" id="pills-datasets" role="tabpanel"
+        aria-labelledby="pills-datasets-tab">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col" width="5%"></th>
+              <th scope="col" width="12%">Dataset</th>
+              <th scope="col" width="22%">Class</th>
+              <th scope="col" width="8%">Splits</th>
+              <th scope="col" width="8%">Examples</th>
+              <th scope="col" width="5%">Loaded</th>
+              <th scope="col" width="10%">Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for dataset_id, dataset in datasets.items() %}
+            <tr>
+              <td><img src="{{ host_prefix }}/static/img/datatypes/{{ dataset.type }}.png" class="intro-img"></td>
+              <td>
+                {% if dataset.enabled %}
+                <a href="{{ host_prefix }}/browse?dataset={{ dataset_id }}&split={{ dataset.splits[0] }}&example_idx=0"
+                  class="blue-link">
+                  {{ dataset_id
+                  }}</a>
+                {% else %}
+                <span class="text-muted"><i>{{ dataset_id }}</i></span>
+                {% endif %}
+              </td>
+              <td>{{ dataset.class }}</td>
+              <!-- <td class="underline-link">{{ dataset.description | safe }}</td> -->
+              <td>
+                {% for split in dataset.splits %}
+                <div class="sub-row"><a
+                    href="{{ host_prefix }}/browse?dataset={{ dataset_id }}&split={{ split }}&example_idx=0">{{ split
                     }}</a>
-                  {% else %}
-                  <span class="text-muted"><i>{{ dataset_id }}</i></span>
-                  {% endif %}
-                </td>
-                <td>{{ dataset.class }}</td>
-                <!-- <td class="underline-link">{{ dataset.description | safe }}</td> -->
-                <td>
-                  {% for split in dataset.splits %}
-                  <div class="sub-row"><a
-                      href="{{ host_prefix }}/browse?dataset={{ dataset_id }}&split={{ split }}&example_idx=0">{{ split
-                      }}</a>
-                  </div>
-                  {% endfor %}
-                </td>
-                <td>
-                  {% for split in dataset.splits %}
-                  {{ dataset.example_count[split] }}<br>
-                  {% endfor %}
-                </td>
-                <td>
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" {% if dataset.enabled %}
-                      checked {% endif %} onclick="setDatasetEnabled('{{ dataset_id }}', this.checked)">
-                  </div>
-                </td>
-                <td>
-                  <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
-                    data-bs-target="#dataset-info-modal-{{ dataset_id }}">
-                    <i class="fa fa-info-circle"></i>
-                  </a>
-                  <a href="{{ host_prefix }}/export_dataset?dataset_id={{ dataset_id }}"
-                    class="btn btn-outline-secondary" data-bs-toggle="tooltip" title="Download the dataset">
-                    <i class="fa fa-download"></i>
-                  </a>
-                  <a onclick="deleteDataset('{{ dataset_id }}')" class="btn btn-outline-danger" data-bs-toggle="tooltip"
-                    title="Delete the dataset">
-                    <i class="fa fa-trash"></i>
-                  </a>
-                </td>
-              </tr>
-              {% include 'forms/dataset_info_modal.html' %}
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
+                </div>
+                {% endfor %}
+              </td>
+              <td>
+                {% for split in dataset.splits %}
+                {{ dataset.example_count[split] }}<br>
+                {% endfor %}
+              </td>
+              <td>
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" {% if dataset.enabled %}
+                    checked {% endif %} onclick="setDatasetEnabled('{{ dataset_id }}', this.checked)">
+                </div>
+              </td>
+              <td>
+                <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+                  data-bs-target="#dataset-info-modal-{{ dataset_id }}">
+                  <i class="fa fa-info-circle"></i>
+                </a>
+                <a href="{{ host_prefix }}/export_dataset?dataset_id={{ dataset_id }}" class="btn btn-outline-secondary"
+                  data-bs-toggle="tooltip" title="Download the dataset">
+                  <i class="fa fa-download"></i>
+                </a>
+                <a onclick="deleteDataset('{{ dataset_id }}')" class="btn btn-outline-danger" data-bs-toggle="tooltip"
+                  title="Delete the dataset">
+                  <i class="fa fa-trash"></i>
+                </a>
+              </td>
+            </tr>
+            {% include 'forms/dataset_info_modal.html' %}
+            {% endfor %}
+          </tbody>
+        </table>
       </div>
-    </div>
-    <div class="tab-content" id="pills-tabContent">
       <div class="tab-pane fade show" id="pills-outputs" role="tabpanel" aria-labelledby="pills-outputs-tab">
         <div class="mt-5">
           <div class="row g-3 mb-3 mt-3 align-items-center">
